# tele_vision

./: .gitignore  CMakeLists.txt  README
src/: compute.c  compute.h  main.c  main_auto.c  misc.c  misc.h  threads.c  threads.h
